@@ -156,10 +156,12 @@ public class SymbolicExecutionTransferRelation extends SingleEdgeTransferRelatio
     Collection<? extends AbstractState> newCS =
         constraintsTransferRelation.strengthen(
             pStateToStrengthen.constraintsState(),
-            List.of(newConstraintsState),
+            ImmutableList.of(newConstraintsState),
             pCfaEdge,
             pPrecision);
-    if (newCS.isEmpty()) return null;
+    if (newCS.isEmpty()) {
+      return null;
+    }
     Preconditions.checkArgument(newCS.size() == 1);
 
     ValueAnalysisState newVS =
